# Loyalty-Predict

./: .gitignore  main.py  pyproject.toml
src/analitycs/: exec.life_cycle.py  exec_life_cycle.py  frequencia_valor.py  fs_education.sql  fs_life_cycle.sql  fs_transacional.sql  life_cycle.sql  life_cycle.txt  mau.sql  report_life_cycle.sql
src/analytics/: dau.sql  exec_query.py  frequencia_valor.sql  fs_education.sql  fs_life_cycle.sql  fs_transacional.sql  target.sql  train.py
